# epub-to-audiobook

./: .gitignore  .windsurfrules  README.md  example.py  pyproject.toml  test_bak.txt
epub_to_audiobook/: __init__.py  cli.py  epub_handler.py  fish_audio.py  kokoro_tts.py
epub_to_audiobook/models/: config.py
epub_to_audiobook/services/: converter.py  epub_parser.py  fish_audio.py
epub_to_audiobook/utils/: audio.py  text.py
examples/: epub_toc_example.py
fish_audio_docs/: fine_grained_control.md  text_to_speech.md  text_to_speech_web_socket.md
tests/: test_text_utils.py
