[tool.poetry]
name = "epub-to-audiobook"
version = "0.1.0"
description = "A command-line application that converts ePub files into audiobooks using Fish Audio's text-to-speech technology"
authors = ["Season Saw <season.saw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fish-audio-sdk = "^2025.2.11"
python-dotenv = "^0.20.0"
kokoro = ">=0.8.2"
soundfile = "^0.13.1"
pydub = "^0.25.1"
ebooklib = "^0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
isort = "^5.12.0"
pylint = "^3.0.0"

[tool.poetry.scripts]
epub2audio = "epub_to_audiobook.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
